--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,58 @@
+# 编译输出
 bin/
-storage/logs
-.idea
+dist/
+*.exe
+*.exe~
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# IDE 配置
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+.project
+.classpath
+
+# Go 相关
+vendor/
+*.mod.tidy
+go.sum.bak
+
+# 存储目录
+storage/
+tmp/
+upload/
+
+# 日志和临时文件
 *.log
+*.out
+*.pid
+
+# 配置文件（本地配置通常不提交）
+config/local.yml
+config/test.yml
+
+# 自动生成的文件
+docs/
+wire_gen.go
+*.mockgen.go
+
+# 部署相关
 deploy/docker-compose/conf
 deploy/docker-compose/data
 chart/*.yaml
 chart/nav/values-*.yaml
+
+# 环境文件
+.env
+.env.local
+.env.*.local
+
+# 操作系统特殊文件
+.DS_Store
+Thumbs.db
