--- a/chart/nav/templates/StatefulSet.yaml
+++ b/chart/nav/templates/StatefulSet.yaml
@@ -35,10 +35,21 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            {{- if .Values.env }}
+            {{- range $key, $value := .Values.env }}
+            - name: {{ $key }}
+              value: {{ $value | quote }}
+            {{- end }}
+            {{- end }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          {{- if .Values.startupProbe }}
+          startupProbe:
+            {{- toYaml .Values.startupProbe | nindent 12 }}
+          {{- end }}
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
@@ -46,28 +57,41 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
+            {{- if .Values.config.createConfigMap }}
             - name: config
               mountPath: /data/app/config/local.yml
               subPath: local.yaml
+            {{- end }}
             - name: data
-              mountPath: /data/app/storage
+              mountPath: {{ .Values.persistence.mountPath | default "/data/app/storage" }}
       volumes:
+        {{- if .Values.config.createConfigMap }}
         - name: config
           configMap: 
             name: {{ include "nav.fullname" . }}
-        {{- if and .Values.persistence.enabled .Values.persistence.existingClaim }}
+        {{- end }}
+        {{- if or (and .Values.persistence.enabled .Values.persistence.existingClaim) (not .Values.persistence.enabled) }}
         - name: data
+          {{- if and .Values.persistence.enabled .Values.persistence.existingClaim }}
           persistentVolumeClaim:
-              claimName: {{ .Values.persistence.existingClaim }}
-        {{- else if not .Values.persistence.enabled }}
-        - name: data
+            claimName: {{ .Values.persistence.existingClaim }}
+          {{- else }}
           emptyDir: {}
-  {{- else if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
+          {{- end }}
+        {{- end }}
+  {{- if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
   volumeClaimTemplates:
   - metadata:
       name: data
     spec:
-      accessModes: [ "ReadWriteOnce" ]
+      accessModes: [ "{{ .Values.persistence.accessMode }}" ]
+      {{- if .Values.persistence.storageClass }}
+      storageClassName: {{ .Values.persistence.storageClass | quote }}
+      {{- end }}
+      {{- if .Values.persistence.selector }}
+      selector:
+        {{- toYaml .Values.persistence.selector | nindent 8 }}
+      {{- end }}
       resources:
         requests:
           storage: {{ .Values.persistence.size }}
